fixed layout problems

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -85,16 +85,8 @@ hr {
 	float: right;
 }
 
-.main {
-	margin: 50px 10px 0px 10px;
-}
-
-.main2 {
-	width: 97.7%;
-	margin: 0px 10px 50px 10px;
-}
-
 .summary {
+	padding: 10px;
 	background-color: #e9e9e9;
 	border-top-right-radius: 20px;
 	border-top-left-radius: 20px;
@@ -106,10 +98,6 @@ hr {
 .summary span {
 	font-weight: bold;
 	color: #ea4958;
-}
-
-td {
-	padding: 10px;
 }
 
 .table-links {
@@ -162,6 +150,7 @@ td div p {
 }
 
 .summary-soon {
+	padding: 5px;
 	text-align: center;
 	cursor: default;
 	background-color: #e9e9e9;
@@ -175,4 +164,9 @@ td div p {
 .summary-soon span {
 	font-weight: bold;
 	color: #ea4958;
+}
+
+#main-table-container {
+	width: 100%;
+	margin-top: 50px;
 }
